# apme

./: .containerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REMEDIATION-abbenay-update.md  SOP.md  action.yml  pyproject.toml  requirements.txt  research.md
.agents/skills/: README.md
.agents/skills/branch-align/: SKILL.md
.agents/skills/pr-contributor-review/: SKILL.md
.agents/skills/pr-new/: SKILL.md
.agents/skills/pr-review/: SKILL.md
.agents/skills/rfe-capture/: SKILL.md
.agents/skills/security-scan/: SKILL.md
.agents/skills/submit-pr/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: test.yml
.sdlc/adrs/: ADR-019-dependency-governance.md  ADR-020-reporting-service.md  ADR-024-thin-cli-daemon-mode.md  ADR-028-session-based-fix-workflow.md  ADR-029-web-gateway-architecture.md  ADR-030-frontend-deployment-model.md  ADR-032-third-party-plugin-services.md  ADR-033-centralized-log-bridge.md  ADR-034-multi-pod-health-registration.md  ADR-034-secret-externalization-subcommand.md  ADR-037-project-centric-ui-model.md  ADR-039-unified-operation-stream.md  ADR-041-rule-catalog-override-architecture.md  ADR-042-third-party-plugin-services.md  ADR-043-default-severity-assignment.md  ADR-044-node-identity-progression-model.md  ADR-045-galaxy-auth-delegation.md  ADR-053-github-integration-strategy.md  ADR-054-production-deployment.md  README.md
.sdlc/context/: ansiblelint-coverage.md  architecture.md  conventions.md  data-flow.md  dependencies.md  deployment.md  design-dashboard.md  design-remediation.md  design-validators.md  lint-rule-mapping.md  personas.md  project-overview.md  rule-catalog.md  rule-doc-format.md  success-metrics.md  technical-requirements.md
.sdlc/decisions/: README.md
.sdlc/decisions/open/: DR-013-aa-integration-approach.md  DR-014-eda-integration-approach.md  DR-015-controller-policy-integration.md
.sdlc/phases/PHASE-002-rewrite-engine/: phase.md
.sdlc/phases/PHASE-003-enterprise-dashboard/: phase.md
.sdlc/phases/PHASE-004-ai-remediation/: phase.md
.sdlc/research/: ansible-core-deprecation-mining.md  cli-reporting-options.md  contentgraph-migration-tracker.md  industry-gap-analysis.md  rfe-coverage-mapping.md  terrible-playbook-scan-gaps.md
.sdlc/specs/: README.md
.sdlc/specs/REQ-001-scanning-engine/: contract.md
.sdlc/specs/REQ-002-automated-remediation/: contract.md
.sdlc/specs/REQ-004-enterprise-integration/: contract.md  requirement.md
.sdlc/specs/REQ-005-secret-externalization/: requirement.md
.sdlc/specs/REQ-008-roi-dashboard/: contract.md  design.md  requirement.md
.sdlc/specs/REQ-011-aa-deprecated-reporting/: requirement.md
.sdlc/specs/REQ-012-eda-rulebook-validation/: requirement.md
.sdlc/specs/REQ-013-opa-policy-inputs/: requirement.md
.sdlc/specs/REQ-014-policy-permissive-mode/: requirement.md
.sdlc/templates/: postmortem.md  requirement.md  rule-doc.md
containers/abbenay/: .env.example  Dockerfile  config.yaml
containers/ansible/: Dockerfile
containers/base/: Dockerfile
containers/cli/: Dockerfile
containers/galaxy-proxy/: Dockerfile
containers/gateway/: Dockerfile
containers/gitleaks/: Dockerfile
containers/native/: Dockerfile
containers/opa/: Dockerfile
containers/podman/: README.md  build.sh  pod.yaml  run-cli.sh  up.sh
containers/primary/: Dockerfile
containers/ui/: nginx.conf.template
deploy/bootc/: Containerfile  README.md  apme-firewall.xml
deploy/bootc/quadlet/: apme-ansible.container  apme-collection-health.container  apme-dep-audit.container  apme-galaxy-proxy.container  apme-gateway.container  apme-gitleaks.container  apme-native.container  apme-opa.container  apme-primary.container  apme-ui.container  apme.pod
deploy/helm/apme/: Chart.yaml  values.yaml
docs/: ANSIBLELINT_COVERAGE.md  ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT.md  DESIGN_AI_ESCALATION.md  DESIGN_DASHBOARD.md  DESIGN_REMEDIATION.md  DESIGN_VALIDATORS.md  DEVELOPMENT.md  LINT_RULE_MAPPING.md  RESEARCH_REVIEW.md  RULE_CATALOG.md  RULE_DOC_FORMAT.md
docs/design/: DESIGN_AI_ESCALATION.md  DESIGN_REMEDIATION.md  README.md  THIRD_PARTY_EXTENSIBILITY_OPTIONS.md
docs/guides/: DEPLOYMENT.md
docs/mockups/: README.md
docs/rules/: RULE_CATALOG.md  RULE_DOC_FORMAT.md
examples/: README.md  scaling_antipatterns.yml
examples/ci/: README.md
examples/ci/github-actions/: README.md  apme-hosted.yml
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.css
frontend/src/components/: ApmeMasthead.tsx  CheckOptionsForm.tsx  GraphVisualization.tsx  Layout.tsx  StatusBadge.tsx  (+9 more)
scripts/: ai-prompt-test.py  gen_grpc.sh  generate_rule_docs.py  scrape_ansible_deprecations.py
src/apme_engine/: cli.py  formatter.py  log_bridge.py  opa_client.py  runner.py
src/apme_gateway/: __init__.py  app.py  config.py  main.py  notifications.py  scan_client.py  session_client.py
src/galaxy_proxy/: metadata.py
tests/: rule_doc_integration_test.py  test_ai_escalation.py  test_ai_graph_transform.py  test_annotation_graph_rules.py  test_ansi.py  test_cli_exit_codes.py  test_cli_health_and_diagnostics.py  test_content_graph.py  test_content_graph_shadow.py  test_engine_finder.py  test_engine_model_loader.py  test_engine_scanner.py  test_event_emitter.py  test_externalize.py  test_formatter_cli.py  test_galaxy_proxy_server.py  test_gateway_api.py  test_gateway_db.py  test_gateway_graph.py  test_gateway_notifications.py  test_gateway_projects.py  test_gateway_scan.py  test_gateway_servicer.py  test_golden_collection.py  test_graph_opa_payload.py  test_graph_remediation.py  test_launcher.py  test_list_ai_models.py  test_module_options_graph_rules.py  test_node_index.py  test_node_state.py  test_opa_client.py  test_remaining_graph_rules.py  test_remediation.py  test_rule_L061.py  test_sarif.py  test_scan_driver.py  test_scanner_hierarchy.py  test_scope_aware_graph_rules_b.py  test_session.py  (+8 more)
tests/integration/: conftest.py  test_daemon_pipeline.py  test_e2e.py  test_e2e.sh  test_formatter_cli.py  test_ui_e2e.py
(+309 files in other folders)
